logs/Slang/generated/hdlconv/hdlconvertor_p242.sv.log
name: hdlconvertor_p242
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p242.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p242.sv:7:1: error: language feature not yet supported
assign q = 0;
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p242.sv:9:1: error: language feature not yet supported
assign q = 1;
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p242.sv:11:1: error: language feature not yet supported
deassign q;
^~~~~~~~~~~
